[package]
name = "streamer"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]

[lib]
name = "streamer"
path = "src/lib/streamer.rs"

[[bin]]
name = "streamer"
path = "src/bin/streamer.rs"
test = false

[dependencies]
arguments = "*"
configuration = "*"
fractal = "*"
log = "*"
probability = "*"
random = "*"
sql = "*"
sqlite = "*"
temperature = { version = "*", features = ["threed-ice"], default-features = false }
term = "*"
threed-ice = "*"
time = "*"

[dev-dependencies]
assert = "*"
